fix: correct site_url format by adding trailing slash

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Tales of Bloomrise Wiki
-site_url: https://wiki.talesofbloomrise.com
+site_url: https://wiki.talesofbloomrise.com/
 use_directory_urls: true
 strict: false
 
