--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,13 +2,18 @@ name: Deploy Wiki
 on:
   push:
     branches:
-      - main  # Ou o nome da sua branch principal
+      - main
 
 permissions:
-  contents: write
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -23,16 +28,22 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install mkdocs-material
 
       - name: Run Build Script
-        run: python build_wiki.py  # Nome do seu script que gera os .md
+        run: python scripts/build_wiki.py # Ajuste o caminho se o script estiver na pasta scripts
+
+      - name: Build MkDocs
+        run: mkdocs build
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: './site' # Pasta onde o MkDocs gera o HTML
 
       - name: Deploy to GitHub Pages
-        run: |
-          pip install mkdocs-material
-          mkdocs gh-deploy --force --remote-name origin --message "Deploying with CNAME"
-        env:
-          # Se o comando acima não preservar o CNAME, você pode forçar via MkDocs:
-        run: |
-          pip install mkdocs-material
-          mkdocs gh-deploy --force
+        id: deployment
+        uses: actions/deploy-pages@v2
